some digging in on the v2 sampler results

--- a/bert-edh-pair-prediction/edh-pair-prediction.ipynb
+++ b/bert-edh-pair-prediction/edh-pair-prediction.ipynb
@@ -112,7 +112,11 @@
     "    assert IS_LOCAL_LAPTOP\n",
     "\n",
     "if DO_DECK_RECOMMENDATIONS:\n",
-    "    assert USE_FINE_TUNED_MODEL"
+    "    assert USE_FINE_TUNED_MODEL\n",
+    "\n",
+    "if CHECK_DECK_RECOMMENDATIONS:\n",
+    "    assert USE_FINE_TUNED_MODEL\n",
+    "    assert IS_LOCAL_LAPTOP"
    ]
   },
   {
@@ -663,25 +667,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "if USE_CARD_SAMPLER_V2:\n",
+    "    features = datasets.Features({'name_a': datasets.Value(dtype='string'),\n",
+    "                                  'text_a': datasets.Value(dtype='string'),\n",
+    "                                  'name_b': datasets.Value(dtype='string'),\n",
+    "                                  'text_b': datasets.Value(dtype='string'),\n",
+    "                                  'label': datasets.Value(dtype='int64'),\n",
+    "                                  'rec_set_type': datasets.Value(dtype='string'), })\n",
+    "else:\n",
+    "    features = datasets.Features({'text_a': datasets.Value(dtype='string'),\n",
+    "                                  'text_b': datasets.Value(dtype='string'),\n",
+    "                                  'label': datasets.Value(dtype='bool'), })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "MAX_LENGTH = 300\n",
     "\n",
     "if DO_FINE_TUNING:\n",
     "    tokenizer = BertTokenizerFast.from_pretrained('bert-base-uncased')\n",
     "\n",
     "    split_types = ['val', 'test', 'train']\n",
-    "    \n",
-    "    \n",
-    "    if USE_CARD_SAMPLER_V2:\n",
-    "        features = datasets.Features({'name_a': datasets.Value(dtype='string'),\n",
-    "                                      'text_a': datasets.Value(dtype='string'),\n",
-    "                                      'name_b': datasets.Value(dtype='string'),\n",
-    "                                      'text_b': datasets.Value(dtype='string'),\n",
-    "                                      'label': datasets.Value(dtype='int64'),\n",
-    "                                      'rec_set_type': datasets.Value(dtype='string'), })\n",
-    "    else:\n",
-    "        features = datasets.Features({'text_a': datasets.Value(dtype='string'),\n",
-    "                                      'text_b': datasets.Value(dtype='string'),\n",
-    "                                      'label': datasets.Value(dtype='bool'), })\n",
     "    \n",
     "    dataset = (load_dataset('csv',\n",
     "                            data_files={split_type: glob(os.path.join(data_dir, split_type, '*.csv'))\n",
@@ -1009,14 +1019,13 @@
     "MAX_LENGTH = 300\n",
     "\n",
     "if CHECK_FINE_TUNED_MODEL_RESULTS:\n",
-    "    tokenizer = BertTokenizerFast.from_pretrained('bert-base-uncased')\n",
-    "\n",
     "    split_types = ['val', 'test', 'train']\n",
     "    \n",
     "    dataset = (load_dataset('csv',\n",
     "                            data_files={split_type: glob(os.path.join(data_dir, split_type, '*.csv'))\n",
     "                                        for split_type in split_types},\n",
-    "                            quoting=csv.QUOTE_ALL)\n",
+    "                            quoting=csv.QUOTE_ALL,\n",
+    "                            features=features)\n",
     "               #.map(fix_label,\n",
     "               #     batched=True)\n",
     "               .shuffle(seeds={split_type: 1337\n",
@@ -1077,6 +1086,7 @@
     "                      'y_pred': probs.argmax(axis=1),\n",
     "                      'y': p.label_ids})\n",
     "    z.loc[:, 'is_right'] = z.y == z.y_pred\n",
+    "    z.loc[:, 'rec_set_type'] = dataset['test'].select(range(1_000))['rec_set_type']\n",
     "\n",
     "    z.sort_values(by='p1', ascending=False, inplace=True)\n",
     "    z.reset_index(drop=True, inplace=True)\n",
@@ -1090,9 +1100,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "z.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z.groupby('rec_set_type').is_right.value_counts(normalize=True) if CHECK_FINE_TUNED_MODEL_RESULTS else None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if CHECK_FINE_TUNED_MODEL_RESULTS:\n",
     "    total_true = z.y.sum()\n",
     "    (z.y.cumsum() / total_true).plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if CHECK_FINE_TUNED_MODEL_RESULTS:\n",
+    "    z.p1.hist(bins=20)"
    ]
   },
   {
@@ -1401,6 +1439,134 @@
    "outputs": [],
    "source": [
     "foo('p1_tokens') if CHECK_DECK_RECOMMENDATIONS else None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import collections\n",
+    "\n",
+    "\n",
+    "def defining_cards(n=5):\n",
+    "    top_n_candidates = {deck_col: set(z\n",
+    "                                      .sort_values(by=f\"p1_{deck_col}\", ascending=False)\n",
+    "                                      .head(n)\n",
+    "                                      .index\n",
+    "                                      .values)\n",
+    "                        for deck_col in deck_names}\n",
+    "#     return top_n_candidates\n",
+    "#     return collections.Counter({c for c_set in top_n_candidates.values() for c in c_set})\n",
+    "    \n",
+    "    return {deck_name: (top_n_candidates[deck_name]\n",
+    "                        .difference(*[top_n_candidates[dn]\n",
+    "                                      for dn in deck_names\n",
+    "                                      if dn != deck_name]))\n",
+    "            for deck_name in deck_names}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "defining_cards(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### bertviz trial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import sys\n",
+    "\n",
+    "# !test -d bertviz_repo && echo \"FYI: bertviz_repo directory already exists, to pull latest version uncomment this line: !rm -r bertviz_repo\"\n",
+    "# # !rm -r bertviz_repo # Uncomment if you need a clean pull from repo\n",
+    "# !test -d bertviz_repo || git clone https://github.com/jessevig/bertviz bertviz_repo\n",
+    "\n",
+    "# if not 'bertviz_repo' in sys.path:\n",
+    "#     sys.path += ['bertviz_repo']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from bertviz import head_view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%javascript\n",
+    "# require.config({\n",
+    "#   paths: {\n",
+    "#       d3: '//cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min',\n",
+    "#     jquery: '//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min',\n",
+    "#   }\n",
+    "# });"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from transformers import BertModel\n",
+    "\n",
+    "# att_model = BertModel.from_pretrained(model_name, output_attentions=True)\n",
+    "\n",
+    "# def show_head_view(tokenizer, sentence_a, sentence_b=None):\n",
+    "#     inputs = tokenizer.encode_plus(sentence_a, sentence_b, return_tensors='pt', add_special_tokens=True)\n",
+    "#     input_ids = inputs['input_ids']\n",
+    "#     if sentence_b:\n",
+    "#         token_type_ids = inputs['token_type_ids']\n",
+    "#         attention = att_model(input_ids, token_type_ids=token_type_ids)[-1]\n",
+    "#         sentence_b_start = token_type_ids[0].tolist().index(1)\n",
+    "#     else:\n",
+    "#         attention = att_model(input_ids)[-1]\n",
+    "#         sentence_b_start = None\n",
+    "#     input_id_list = input_ids[0].tolist() # Batch index 0\n",
+    "#     tokens = tokenizer.convert_ids_to_tokens(input_id_list)    \n",
+    "#     head_view(attention, tokens, sentence_b_start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sentence_a = card_text.loc['Purphoros, Bronze-Blooded', 'text']\n",
+    "# sentence_b = card_text.loc['Hammer of Nazahn', 'text']\n",
+    "\n",
+    "# show_head_view(tokenizer, sentence_a, sentence_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !rm -rf bertviz_repo"
    ]
   },
   {
@@ -1811,7 +1977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
