multiproc live updates

--- a/bert-edh-pair-prediction/mtg-language-model.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "import glob\n",
     "import os\n",
     "import random\n",
+    "import shutil\n",
     "import subprocess\n",
     "\n",
     "import datasets\n",
@@ -33,21 +34,21 @@
     "                          TrainingArguments,\n",
     "                          pipeline, )\n",
     "\n",
-    "from utils import grouper"
+    "from utils import build_tokenizer_map_func, grouper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "IS_LOCAL_LAPTOP = True\n",
-    "TRAIN_TOKENIZER = True\n",
-    "MAKE_MLM_NSP_DATASET_INPUTS = True\n",
+    "IS_LOCAL_LAPTOP = False\n",
+    "TRAIN_TOKENIZER = False\n",
+    "MAKE_MLM_NSP_DATASET_INPUTS = False\n",
     "MAKE_MLM_NSP_DATASET = True\n",
     "DO_CHUNKED_DATASET_BUILDING = True\n",
-    "SAVE_DATASET_TO_FILE = True\n",
+    "SAVE_DATASET_TO_FILE = False\n",
     "LOAD_DATASET_FROM_FILE = False\n",
     "DO_PRE_TRAINING = False\n",
     "DO_SMALL_PRETRAIN_TEST = False\n",
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,12 +81,12 @@
     "# for the chunking of the dataset builder\n",
     "\n",
     "N_PROCS = os.cpu_count()\n",
-    "N_CHUNKS = 200"
+    "N_CHUNKS = N_PROCS * 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,21 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{2}{r}{r}{g}{g} enchantment: at the beginning of your upkeep, you may say ach! hans, run! its the . . . and the name of a creature card. if you do, search your library for a card with that name, put it onto the battlefield, then shuffle your library. that creature gains haste. exile it at the beginning of the next end step.\r\n",
-      "{2}{b} enchantment: {3}{b}, exile a permanent you control with a league of dastardly doom watermark: return a permanent card with a league of dastardly doom watermark from your graveyard to the battlefield.\r\n",
-      "{w}{u}{b}{r}{g} summon — legend: cannot be the target of spells or effects. world champion has power and toughness equal to the life total of target opponent. {0}: discard your hand to search your library for 1996 world champion and reveal it to all players. shuffle your library and put 1996 world champion on top of it. use this ability only at the beginning of your upkeep, and only if 1996 world champion is in your library.\r\n",
-      "{4}{w}{b} enchantment: spells and abilities you control cant destroy, exile, target, or cause you to sacrifice a good thing. at the beginning of your upkeep, double your life total. then, if you have 1,000 or more life, you lose the game.\r\n",
-      "{2}{w} instant: exile target attacking creature. then remove it from the game. then put it into the absolutely-removed-from-the-freaking-game-forever zone.\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if TRAIN_TOKENIZER:\n",
     "    !head -n5 mtg-corpus.txt"
@@ -201,18 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 5.76 s, sys: 426 ms, total: 6.19 s\n",
-      "Wall time: 2.29 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "\n",
@@ -238,58 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "reliquary\r\n",
-      "mediocrity\r\n",
-      "petravark\r\n",
-      "petrahydrox\r\n",
-      "scrapheap\r\n",
-      "lichenthrope\r\n",
-      "ertais\r\n",
-      "geargrabber\r\n",
-      "unspeakable\r\n",
-      "sluggishness\r\n",
-      "hollowhenge\r\n",
-      "belzenlok\r\n",
-      "cerulean\r\n",
-      "vizkopa\r\n",
-      "vitaspore\r\n",
-      "stingmoggie\r\n",
-      "miscreant\r\n",
-      "misfortune\r\n",
-      "saltskitter\r\n",
-      "saltcrusted\r\n",
-      "comeuppance\r\n",
-      "collaborator\r\n",
-      "eddytrail\r\n",
-      "prognostic\r\n",
-      "polyraptor\r\n",
-      "morselhoarder\r\n",
-      "hemorrhage\r\n",
-      "melancholy\r\n",
-      "pummeler\r\n",
-      "tromokratis\r\n",
-      "uncontested\r\n",
-      "thraximundar\r\n",
-      "astrolabe\r\n",
-      "bangchuckers\r\n",
-      "epochrasite\r\n",
-      "gurzigost\r\n",
-      "kaleidostone\r\n",
-      "moondrakes\r\n",
-      "nucklavee\r\n",
-      "svyelunite\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if TRAIN_TOKENIZER:\n",
     "    !tail -n40 {MODEL_NAME}/vocab.txt"
@@ -297,17 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   11400 mtg-language/vocab.txt\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if TRAIN_TOKENIZER:\n",
     "    !wc -l {MODEL_NAME}/vocab.txt"
@@ -357,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,20 +345,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.16018862050852034"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a, b, c = -14, -4, 1\n",
     "beta = (-b - (b ** 2 - 4 * a * c) ** .5) / (2 * a)\n",
@@ -442,19 +356,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num records train: 14769\n",
-      "num records test:  3501\n",
-      "num records val:   3486\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if NUM_MAX_PAIRS is None:\n",
     "    TARGET_TEST_FRAC = beta\n",
@@ -503,19 +407,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num records train: 153021\n",
-      "num records test:  56685\n",
-      "num records val:   30442\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if MAKE_MLM_NSP_DATASET_INPUTS:\n",
     "    import mtg.extract.edhrec\n",
@@ -545,120 +439,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>commander</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>forsaken monument</td>\n",
-       "      <td>kozilek, the great distortion</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>war room</td>\n",
-       "      <td>kozilek, the great distortion</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                name                      commander\n",
-       "0  forsaken monument  kozilek, the great distortion\n",
-       "1           war room  kozilek, the great distortion"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "edhrec_train.head(2) if MAKE_MLM_NSP_DATASET_INPUTS else None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>commander</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>hedron archive</td>\n",
-       "      <td>kozilek, the great distortion</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>mind stone</td>\n",
-       "      <td>kozilek, the great distortion</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              name                      commander\n",
-       "7   hedron archive  kozilek, the great distortion\n",
-       "10      mind stone  kozilek, the great distortion"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "edhrec_test.head(2) if MAKE_MLM_NSP_DATASET_INPUTS else None"
    ]
@@ -754,7 +546,7 @@
     "    \n",
     "    if DO_CHUNKED_DATASET_BUILDING:\n",
     "        commands = [\n",
-    "            f'python edhrec_dataset_chunk_proc.py -n {N_CHUNKS} -c {c} -d mtg-language-data -o mtg-mlm-nsp-dataset-chunks > log.{c}.txt 2>&1'\n",
+    "            f'python edhrec_dataset_chunk_proc.py -n {N_CHUNKS} -c {c} -d mtg-language-data -o mtg-mlm-nsp-dataset-chunks > logs/log.{c}.txt 2>&1'\n",
     "            for c in range(N_CHUNKS)\n",
     "        ]\n",
     "\n",
@@ -770,11 +562,12 @@
     "            # will wipe the cache directory after every proc group\n",
     "            hf_cache_dir = os.path.join(os.path.expanduser('~'), '.cache', 'huggingface', 'datasets')\n",
     "            if os.path.isdir(hf_cache_dir):\n",
-    "                os.rmdir(hf_cache_dir)\n",
+    "                shutil.rmtree(hf_cache_dir)\n",
     "\n",
     "        base_dataset = datasets.DatasetDict({\n",
-    "            split: concatenate_datasets([load_from_disk(f)\n",
-    "                                         for f in glob.glob('mtg-mlm-nsp-dataset-chunks/*')])\n",
+    "            split: datasets.concatenate_datasets(\n",
+    "                [datasets.load_from_disk(f)[split]\n",
+    "                 for f in glob.glob('mtg-mlm-nsp-dataset-chunks/*')])\n",
     "            for split in SPLITS})\n",
     "    else:\n",
     "        base_dataset = datasets.load_dataset('edhrec_dataset.py',\n",
@@ -785,10 +578,48 @@
     "               .shuffle(seeds={split: SEED for split in SPLITS})\n",
     "               .map(tokenizer_map_func,\n",
     "                    batched=False,\n",
-    "                    num_proc=NUM_PROC)\n",
+    "                    num_proc=N_PROCS)\n",
     "               .map(add_labels,\n",
     "                    batched=True,\n",
-    "                    num_proc=NUM_PROC));"
+    "                    num_proc=N_PROCS));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_dataset = datasets.DatasetDict({\n",
+    "            split: datasets.concatenate_datasets(\n",
+    "                [datasets.load_from_disk(f)[split]\n",
+    "                 for f in glob.glob('mtg-mlm-nsp-dataset-chunks/*')])\n",
+    "            for split in SPLITS})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = (base_dataset\n",
+    "               .shuffle(seeds={split: SEED for split in SPLITS})\n",
+    "               .map(tokenizer_map_func,\n",
+    "                    batched=False,\n",
+    "                    num_proc=N_PROCS)\n",
+    "               .map(add_labels,\n",
+    "                    batched=True,\n",
+    "                    num_proc=N_PROCS));"
    ]
   },
   {
@@ -817,6 +648,16 @@
    "source": [
     "if SAVE_DATASET_TO_FILE:\n",
     "    dataset.save_to_disk('mtg-mlm-nsp-dataset')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "aws s3 ls s3://mtg-research"
    ]
   },
   {
@@ -1027,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
