chunked dataset builder debug updates

--- a/bert-edh-pair-prediction/mtg-language-model.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model.ipynb
@@ -48,7 +48,7 @@
     "MAKE_MLM_NSP_DATASET_INPUTS = False\n",
     "MAKE_MLM_NSP_DATASET = True\n",
     "DO_CHUNKED_DATASET_BUILDING = True\n",
-    "SAVE_DATASET_TO_FILE = False\n",
+    "SAVE_DATASET_TO_FILE = True\n",
     "LOAD_DATASET_FROM_FILE = False\n",
     "DO_PRE_TRAINING = False\n",
     "DO_SMALL_PRETRAIN_TEST = False\n",
@@ -81,7 +81,7 @@
     "# for the chunking of the dataset builder\n",
     "\n",
     "N_PROCS = os.cpu_count()\n",
-    "N_CHUNKS = N_PROCS * 10"
+    "N_CHUNKS = N_PROCS * 100"
    ]
   },
   {
@@ -518,19 +518,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_SEQ_LENGTH = 200\n",
-    "\n",
-    "if MAKE_MLM_NSP_DATASET:\n",
-    "    tokenizer = BertTokenizerFast.from_pretrained(MODEL_NAME)\n",
-    "    tokenizer_map_func = build_tokenizer_map_func(tokenizer, max_length=MAX_SEQ_LENGTH)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def add_labels(examples):\n",
     "    return {'labels': examples['input_ids']}"
    ]
@@ -541,14 +528,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def make_chunked_dataset_shell_cmd(n_chunks, c, max_seq_length):\n",
+    "    return (f'python edhrec_dataset_chunk_proc.py'\n",
+    "            f' -n {N_CHUNKS}'\n",
+    "            f' -c {c}'\n",
+    "            f' -d mtg-language-data'\n",
+    "            f' -o mtg-mlm-nsp-dataset-chunks'\n",
+    "            f' -l {max_seq_length}'\n",
+    "            f' > logs/log.{c}.txt 2>&1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_SEQ_LENGTH = 200\n",
+    "\n",
     "if MAKE_MLM_NSP_DATASET:\n",
     "    os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
     "    \n",
     "    if DO_CHUNKED_DATASET_BUILDING:\n",
-    "        commands = [\n",
-    "            f'python edhrec_dataset_chunk_proc.py -n {N_CHUNKS} -c {c} -d mtg-language-data -o mtg-mlm-nsp-dataset-chunks > logs/log.{c}.txt 2>&1'\n",
-    "            for c in range(N_CHUNKS)\n",
-    "        ]\n",
+    "        if not os.path.isdir('logs'):\n",
+    "            os.makedirs('logs')\n",
+    "\n",
+    "        commands = [make_chunked_dataset_shell_cmd(N_CHUNKS, c, MAX_SEQ_LENGTH)\n",
+    "                    for c in range(N_CHUNKS)]\n",
     "\n",
     "        print(f'executing {N_CHUNKS} commands in chunks of {N_PROCS} parallel commands')\n",
     "\n",
@@ -570,18 +576,17 @@
     "                 for f in glob.glob('mtg-mlm-nsp-dataset-chunks/*')])\n",
     "            for split in SPLITS})\n",
     "    else:\n",
-    "        base_dataset = datasets.load_dataset('edhrec_dataset.py',\n",
-    "                                             data_dir=DATA_DIR,\n",
-    "                                             num_max_pairs=NUM_MAX_PAIRS)\n",
+    "        tokenizer = BertTokenizerFast.from_pretrained(MODEL_NAME)\n",
+    "        tokenizer_map_func = build_tokenizer_map_func(tokenizer, max_length=MAX_SEQ_LENGTH)\n",
+    "        \n",
+    "        base_dataset = (datasets.load_dataset('edhrec_dataset.py',\n",
+    "                                              data_dir=DATA_DIR,\n",
+    "                                              num_max_pairs=NUM_MAX_PAIRS)\n",
+    "                        .map(tokenizer_map_func, batched=False, num_proc=N_PROCS)\n",
+    "                        .map(add_labels, batched=True, num_proc=N_PROCS))\n",
     "\n",
     "    dataset = (base_dataset\n",
-    "               .shuffle(seeds={split: SEED for split in SPLITS})\n",
-    "               .map(tokenizer_map_func,\n",
-    "                    batched=False,\n",
-    "                    num_proc=N_PROCS)\n",
-    "               .map(add_labels,\n",
-    "                    batched=True,\n",
-    "                    num_proc=N_PROCS));"
+    "               .shuffle(seeds={split: SEED for split in SPLITS}))"
    ]
   },
   {
@@ -590,11 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dataset = datasets.DatasetDict({\n",
-    "            split: datasets.concatenate_datasets(\n",
-    "                [datasets.load_from_disk(f)[split]\n",
-    "                 for f in glob.glob('mtg-mlm-nsp-dataset-chunks/*')])\n",
-    "            for split in SPLITS})"
+    "base_dataset if MAKE_MLM_NSP_DATASET else None"
    ]
   },
   {
@@ -603,23 +604,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = (base_dataset\n",
-    "               .shuffle(seeds={split: SEED for split in SPLITS})\n",
-    "               .map(tokenizer_map_func,\n",
-    "                    batched=False,\n",
-    "                    num_proc=N_PROCS)\n",
-    "               .map(add_labels,\n",
-    "                    batched=True,\n",
-    "                    num_proc=N_PROCS));"
+    "base_dataset.shape"
    ]
   },
   {
@@ -637,7 +622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.shape if MAKE_MLM_NSP_DATASET else None"
+    "# dataset.shape if MAKE_MLM_NSP_DATASET else None"
    ]
   },
   {
@@ -678,7 +663,7 @@
     "    + move to a **CPU** box -- not a GPU box. this dataset creation is done on the CPU.\n",
     "    + set up cpu box\n",
     "        + `ssh-keygen -t ed25519 -C \"r.zach.lamberty@gmail.com\"`\n",
-    "        + `cat ~/.ssh/id_ed25519`\n",
+    "        + `cat ~/.ssh/id_ed25519.pub`\n",
     "        + add to github [here](https://github.com/settings/keys)\n",
     "        + `git clone git@github.com:RZachLamberty/mtg-research.git`\n",
     "        + `source activate ...`\n",
@@ -728,21 +713,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if DO_SMALL_PRETRAIN_TEST:\n",
-    "    TRAIN_BATCH = 8\n",
-    "    EVAL_BATCH = 8\n",
-    "    LOGGING_STEPS = 250\n",
-    "    train_dataset = dataset['train'].select(range(80))\n",
-    "    eval_dataset = dataset['validation'].select(range(80))\n",
-    "else:\n",
-    "    TRAIN_BATCH = 36\n",
-    "    EVAL_BATCH = 36\n",
-    "    LOGGING_STEPS = 250\n",
-    "    train_dataset = dataset['train']\n",
-    "    eval_dataset = dataset['validation']\n",
-    "\n",
-    "\n",
     "if DO_PRE_TRAINING:\n",
+    "    if DO_SMALL_PRETRAIN_TEST:\n",
+    "        TRAIN_BATCH = 8\n",
+    "        EVAL_BATCH = 8\n",
+    "        LOGGING_STEPS = 250\n",
+    "        train_dataset = dataset['train'].select(range(80))\n",
+    "        eval_dataset = dataset['validation'].select(range(80))\n",
+    "    else:\n",
+    "        TRAIN_BATCH = 36\n",
+    "        EVAL_BATCH = 36\n",
+    "        LOGGING_STEPS = 250\n",
+    "        train_dataset = dataset['train']\n",
+    "        eval_dataset = dataset['validation']\n",
+    "\n",
     "    output_dir = './mtg-language-results-v1'\n",
     "    \n",
     "    # # use this format to pick up from an aborted run\n",
@@ -793,7 +777,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.evaluate(train_dataset)"
+    "trainer.evaluate(train_dataset) if DO_PRE_TRAINING else None"
    ]
   },
   {
@@ -802,7 +786,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.evaluate(eval_dataset)"
+    "trainer.evaluate(eval_dataset) if DO_PRE_TRAINING else None"
    ]
   },
   {
@@ -811,7 +795,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.save_model('mtg-language-test-small')"
+    "trainer.save_model('mtg-language-test-small') if DO_PRE_TRAINING else None"
    ]
   },
   {
@@ -823,7 +807,7 @@
     "fill_mask = pipeline(\n",
     "    'fill-mask',\n",
     "    model='./mtg-language-test-small',\n",
-    "    tokenizer=tokenizer)"
+    "    tokenizer=tokenizer) if DO_PRE_TRAINING else None"
    ]
   },
   {
@@ -832,7 +816,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset['validation'][0]['text_a']"
+    "dataset['validation'][0]['text_a'] if DO_PRE_TRAINING else None"
    ]
   },
   {
@@ -841,7 +825,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fill_mask('{3}{w}{b} legendary creature — vampire knight 4/4: vigilance, lifelink {t}, pay 7 life: destroy target nonland [MASK]. activate this ability only during your turn.')"
+    "fill_mask('{3}{w}{b} legendary creature — vampire knight 4/4: vigilance, lifelink {t}, pay 7 life: destroy target nonland [MASK]. activate this ability only during your turn.') if DO_PRE_TRAINING else None"
    ]
   },
   {
@@ -868,7 +852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
