successful multiproc of dataset

--- a/bert-edh-pair-prediction/mtg-language-model.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model.ipynb
@@ -55,8 +55,8 @@
     "\n",
     "# whether or not we cap the number of card pairs, or we choose or use\n",
     "# all possible pairs\n",
-    "NUM_MAX_PAIRS = None\n",
-    "# NUM_MAX_PAIRS = 1"
+    "# NUM_MAX_PAIRS = None\n",
+    "NUM_MAX_PAIRS = 500"
    ]
   },
   {
@@ -66,7 +66,10 @@
    "outputs": [],
    "source": [
     "if TRAIN_TOKENIZER:\n",
-    "    assert IS_LOCAL_LAPTOP"
+    "    assert IS_LOCAL_LAPTOP\n",
+    "    \n",
+    "if DO_CHUNKED_DATASET_BUILDING:\n",
+    "    assert NUM_MAX_PAIRS is not None, \"this is like 2 TB of data\""
    ]
   },
   {
@@ -81,7 +84,7 @@
     "# for the chunking of the dataset builder\n",
     "\n",
     "N_PROCS = os.cpu_count()\n",
-    "N_CHUNKS = N_PROCS * 100"
+    "N_CHUNKS = N_PROCS * 10"
    ]
   },
   {
@@ -528,14 +531,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_chunked_dataset_shell_cmd(n_chunks, c, max_seq_length):\n",
+    "def make_chunked_dataset_shell_cmd(n_chunks, c, num_max_pairs, max_seq_length):\n",
+    "    nmp_flag = f' -m {num_max_pairs}' if num_max_pairs is not None else ''\n",
     "    return (f'python edhrec_dataset_chunk_proc.py'\n",
     "            f' -n {N_CHUNKS}'\n",
     "            f' -c {c}'\n",
     "            f' -d mtg-language-data'\n",
     "            f' -o mtg-mlm-nsp-dataset-chunks'\n",
+    "            f'{nmp_flag}'\n",
     "            f' -l {max_seq_length}'\n",
     "            f' > logs/log.{c}.txt 2>&1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean up the logs and outputs\n",
+    "if DO_CHUNKED_DATASET_BUILDING:\n",
+    "    shutil.rmtree('logs', ignore_errors=True)\n",
+    "    shutil.rmtree('mtg-mlm-nsp-dataset-chunks/', ignore_errors=True)"
    ]
   },
   {
@@ -549,11 +566,15 @@
     "if MAKE_MLM_NSP_DATASET:\n",
     "    os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
     "    \n",
+    "    for split in SPLITS:\n",
+    "        n = pd.read_parquet(os.path.join(DATA_DIR, f'cards.{split}.parquet')).shape[0]\n",
+    "        print(f\"num records {split}: {n}\")\n",
+    "    \n",
     "    if DO_CHUNKED_DATASET_BUILDING:\n",
     "        if not os.path.isdir('logs'):\n",
     "            os.makedirs('logs')\n",
     "\n",
-    "        commands = [make_chunked_dataset_shell_cmd(N_CHUNKS, c, MAX_SEQ_LENGTH)\n",
+    "        commands = [make_chunked_dataset_shell_cmd(N_CHUNKS, c, NUM_MAX_PAIRS, MAX_SEQ_LENGTH)\n",
     "                    for c in range(N_CHUNKS)]\n",
     "\n",
     "        print(f'executing {N_CHUNKS} commands in chunks of {N_PROCS} parallel commands')\n",
@@ -852,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
