one additional check

--- a/bert-edh-pair-prediction/mtg-language-model.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model.ipynb
@@ -70,6 +70,9 @@
     "    \n",
     "if DO_CHUNKED_DATASET_BUILDING:\n",
     "    assert NUM_MAX_PAIRS is not None, \"this is like 2 TB of data\""
+    "\n",
+    "if MAKE_MLM_NSP_DATASET_INPUTS:\n",
+    "    assert IS_LOCAL_LAPTOP"
    ]
   },
   {
@@ -699,6 +702,7 @@
     "        + `True`:\n",
     "            + `MAKE_MLM_NSP_DATASET`\n",
     "            + `DO_CHUNKED_DATASET_BUILDING`\n",
+    "            + `SAVE_DATASET_TO_FILE`\n",
     "        + all others `False`\n",
     "    + save this dataset and copy it down\n",
     "+ train\n",
