--- a/bert-edh-pair-prediction/mtg-language-model.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model.ipynb
@@ -69,7 +69,7 @@
     "    assert IS_LOCAL_LAPTOP\n",
     "    \n",
     "if DO_CHUNKED_DATASET_BUILDING:\n",
-    "    assert NUM_MAX_PAIRS is not None, \"this is like 2 TB of data\""
+    "    assert NUM_MAX_PAIRS is not None, \"this is like 2 TB of data\"",
     "\n",
     "if MAKE_MLM_NSP_DATASET_INPUTS:\n",
     "    assert IS_LOCAL_LAPTOP"
